prep for research meeting

--- a/calculator.html
+++ b/calculator.html
@@ -9,16 +9,30 @@
 <body>
     <section>
         <form> <h3> Please Answer the Following Questions About Your Farm</h3>
-            <p><label> County
+            <p><label> Which region of Michigan is your farm located?
                 <select>
-                    <option value="saying hi">Saying hi</option>
-                    <option value="looking for a contractor">Looking for a contractor</option>
-                    <option value="interested in an interview ">Interested in an interview</option>
+                    <option value="Northern Michigan">Northern Michigan</option>
+                    <option value="Western Michigan">Western Michigan</option>
+                    <option value="Central Michigan">Central Michigan</option>
+                    <option value="Southeast Michigan">Southeast Michigan</option>
                   </select>
-            </label> </p>
-            <label>Electricity Consumed Per Year (kWh)
-                <input type="text">
+            <p><label>How much electricity does your farm consume per year? (kWh)
+                <input type="text"> </p>
             </label>
+            <p><label> What percentage of your electricity consumption do you want to be covered by solar?
+                <select>
+                        <option value="0.10">10%</option>
+                        <option value="0.20">20%</option>
+                        <option value="0.30">30%</option>
+                        <option value="0.40">40%</option>
+                        <option value="0.50">50%</option>
+                        <option value="0.60 ">60%</option>
+                        <option value="0.70">70%</option>
+                        <option value="0.80">80%</option>
+                        <option value="0.90 ">90%</option>
+                        <option value="1.0 ">100%</option>
+                      </select>
+                </label> </p>
             <p><label> Email Address
                 <input type="text">
             </label> </p>
