--- a/funding.html
+++ b/funding.html
@@ -7,6 +7,18 @@
     <title>Funding Opportunities</title>
 </head>
 <body>
-    
+    <p><h4>The Investment Tax Credit </h4></p>
+    <p>The Investment Tax Credit (ITC), also known as the federal solar tax credit allows The investment 
+        tax credit (ITC), also known as the federal solar tax credit, applies to both residential and 
+        commercial projects. It allows you to deduct a percentage of the cost of installation from your 
+        federal taxes. 
+        <p>2020 - 2022: Owners of the new residential and commercial  solar project can deduct 26% 
+        of the installation cost from their taxes </p>
+        <p>2023: Owners of the new residential and commercial solar project can deduct 22% of the 
+        installation cost from their taxes </p>
+        <p>2024: Owners of the commercial solar project can deduct 
+        10% of the cost from their taxes </p>
+        <p><a href="https://news.energysage.com/solar-tax-credit-explained/">Click here for more information</a>
+        </p>
 </body>
 </html>
