--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     </header>
     <nav>
         <ul>
-            <li><a href="index.html">Welcome</a></li>
-            <li><a href=http://maec.msu.edu/farmenergy/index.html>Back to Michigan Farm Energy Program</a></li>
-            <li><a href="calculator.html">Can I Afford Solar Calculator</a></li>
+            <li><a href="calculator.html">Solar Cost Calculator</a></li>
             <li><a href="funding.html">Sources of Funding</a></li>
             <li><a href="resources.html">Local Resources</a></li>
+            <li><a href="questions.html">FAQ</a></li>
+            <li><a href=http://maec.msu.edu/farmenergy/index.html>Back to Michigan Farm Energy Program</a></li>
         </ul>
     </nav>
 </body>
