--- a/resources.html
+++ b/resources.html
@@ -6,7 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vendors and Resources Near You</title>
 </head>
+<h1>Resources </h1>
 <body>
+    <h2>Local Vendors</h2>
+    <h3>Northern Michigan</h3>
+    <h3>Western Michigan</h3>
+    <h3>Central Michgigan</h3>
+    <h3>Southeast Michigan</h3>
+
+    <h2>Extension Services</h2>
     
 </body>
 </html>
