--- a/calculator.html
+++ b/calculator.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Economic Feasibility Analysis</title>
 </head>
 <body>
+    <h1>Michigan State University Decision Support Tool</h1> 
+
+    <div class="topnav">
+        <a href="index.html">Home</a>
+        <a href="calculator.html">Solar Cost Calculator</a>
+        <a href="funding.html">Funding</a></li>
+        <a href="resources.html">Local Resources</a>
+        <a href="questions.html">FAQ</a>
+    </div>
+
     <section>
         <form> <h3> Please Answer the Following Questions About Your Farm</h3>
             <p><label> Which region of Michigan is your farm located?
