--- a/funding.html
+++ b/funding.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Funding Opportunities</title>
 </head>
 <body>
+    <h1>Michigan State University Decision Support Tool</h1> 
+
+    <div class="topnav">
+        <a href="index.html">Home</a>
+        <a href="calculator.html">Solar Cost Calculator</a>
+        <a href="funding.html">Funding</a></li>
+        <a href="resources.html">Local Resources</a>
+        <a href="questions.html">FAQ</a>
+    </div>
     <p><h4>The Investment Tax Credit </h4></p>
     <p>The Investment Tax Credit (ITC), also known as the federal solar tax credit allows The investment 
         tax credit (ITC), also known as the federal solar tax credit, applies to both residential and 
