--- a/questions.html
+++ b/questions.html
@@ -4,10 +4,70 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>FAQ</title>
 </head>
-<h2> Frequently Asked Questions</h2>
 <body>
+    <h1>Michigan State University Decision Support Tool</h1> 
+
+    <div class="topnav">
+        <a href="index.html">Home</a>
+        <a href="calculator.html">Solar Cost Calculator</a>
+        <a href="funding.html">Funding</a></li>
+        <a href="resources.html">Local Resources</a>
+        <a href="questions.html">FAQ</a>
+    </div>
     
+    <main>
+        <h1 class="faq-heading">Frequently Asked Questions</h1>
+        <section class="faq-container">
+            <div class="faq-one">
+                <!-- faq question -->
+                <h2 class="faq-page">Where can I install solar panels? </h2>
+                <!-- faq answer -->
+                <div class="faq-body">
+                    <p>Roofs of on-farm structures 
+                        Make sure the building can bear the weight of the panels 
+                        South-facing roofs will produce the most energy 
+                        East and west-facing roofs will produce a sizable amount of energy
+                        Panels should never be installed on the north side of a roof 
+                        Pasture and non-arable land 
+                        Make sure panels are high enough that cattle can go underneath it
+                        Can provide shade for livestock 
+                        Makes non-arable land productive 
+                        Arable land
+                        Consider the spacing between and height of panels so that machinery can pass through 
+                        Panels can provide shade that is ideal for shade-loving crops 
+                        </p>
+                </div>
+            </div>
+            <hr class="hr-line">
+            <div class="faq-two">
+                <!-- faq question -->
+                <h2 class="faq-page">How much maintenance do solar panels require?</h2>
+                <!-- faq answer -->
+                <div class="faq-body">
+                    <p>The typical maintenance for solar panels is cleaning and a yearly inspection. Cleanings are 
+                        typically done twice a year, unless there is not regular rainfall or they are installed in 
+                        an area prone to dirt and debris. </p>
+                </div>
+            </div>
+            <hr class="hr-line">
+            <div class="faq-three">
+                <!-- faq question -->
+<h2 class="faq-page">How do I know if I need to schedule panel maintenance? </h2>
+                <!-- faq answer -->
+                <div class="faq-body">
+                    <p>If there is a drop in productivity, or your electricity bills are 
+                        higher than usual, the panels may not be performing properly. The 
+                        drop in production indicates there is dirt and debris on the panels, 
+                        or that there is a maintenance issue that needs to be addressed. </p>
+                </div>
+            </div>
+        </section>
+    </main>
+    <script src="main.js"></script>
+
+
 </body>
 </html>
