--- a/resources.html
+++ b/resources.html
@@ -4,10 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Vendors and Resources Near You</title>
 </head>
-<h1>Resources </h1>
 <body>
+    <h1>Michigan State University Decision Support Tool</h1> 
+
+    <div class="topnav">
+        <a href="index.html">Home</a>
+        <a href="calculator.html">Solar Cost Calculator</a>
+        <a href="funding.html">Funding</a></li>
+        <a href="resources.html">Local Resources</a>
+        <a href="questions.html">FAQ</a>
+    </div>
+
+<h3>Local Resources</h3>    
+
     <h2>Local Vendors</h2>
     <h3>Northern Michigan</h3>
     <h3>Western Michigan</h3>
