--- a/questions.html
+++ b/questions.html
@@ -6,9 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>FAQ</title>
+    <h1>Michigan State University SolarforDairy</h1> 
 </head>
 <body>
-    <h1>Michigan State University Decision Support Tool</h1> 
+    <main>
+        <div class="questions-header"></div>
+    </main> 
 
     <div class="topnav">
         <a href="index.html">Home</a>
@@ -27,18 +30,26 @@
                 <!-- faq answer -->
                 <div class="faq-body">
                     <p>Roofs of on-farm structures 
-                        Make sure the building can bear the weight of the panels 
-                        South-facing roofs will produce the most energy 
-                        East and west-facing roofs will produce a sizable amount of energy
-                        Panels should never be installed on the north side of a roof 
+                        <ul class=roofs>
+                            <li>Make sure the building can bear the weight of the panels</li>
+                        <li>South-facing roofs will produce the most energy</li>
+                        <li>East and west-facing roofs will produce a sizable amount of energy</li>
+                        <li>Panels should never be installed on the north side of a roof</li>
+                        </ul>
+
                         Pasture and non-arable land 
-                        Make sure panels are high enough that cattle can go underneath it
-                        Can provide shade for livestock 
-                        Makes non-arable land productive 
+                        <ul class=nonarable>
+                        <li>Make sure panels are high enough that cattle can go underneath it</li>
+                        <li>Can provide shade for livestock</li>
+                        <li>Makes non-arable land productive</li>
+                        </ul>
+
                         Arable land
-                        Consider the spacing between and height of panels so that machinery can pass through 
-                        Panels can provide shade that is ideal for shade-loving crops 
-                        </p>
+                        <ul class="arable">
+                        <li>Consider the spacing between and height of panels so that machinery can pass through</li>
+                        <li>Panels can provide shade that is ideal for shade-loving crops</li>
+                        </ul>
+                    </p>
                 </div>
             </div>
             <hr class="hr-line">
