--- a/resources.html
+++ b/resources.html
@@ -6,9 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Vendors and Resources Near You</title>
+    <h1>Michigan State University Decision Support Tool</h1> 
 </head>
 <body>
-    <h1>Michigan State University Decision Support Tool</h1> 
+    <main>
+        <div class="resources-header"></div>
+    </main> 
 
     <div class="topnav">
         <a href="index.html">Home</a>
