--- a/funding.html
+++ b/funding.html
@@ -6,9 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Funding Opportunities</title>
+    <h1>Michigan State University SolarforDairy</h1>
 </head>
+
 <body>
-    <h1>Michigan State University Decision Support Tool</h1> 
+    <main>
+        <div class="funding-header"></div>
+    </main> 
 
     <div class="topnav">
         <a href="index.html">Home</a>
