--- a/questions.html
+++ b/questions.html
@@ -70,9 +70,9 @@
                 <!-- faq answer -->
                 <div class="faq-body">
                     <p>If there is a drop in productivity, or your electricity bills are 
-                        higher than usual, the panels may not be performing properly. The 
-                        drop in production indicates there is dirt and debris on the panels, 
-                        or that there is a maintenance issue that needs to be addressed. </p>
+                        higher than usual, the panels may not be performing properly. </p>
+                    <p>The drop in production indicates there is dirt and debris on the panels, 
+                        or that there is another maintenance issue that needs to be addressed. </p>
                 </div>
             </div>
         </section>
