--- a/resources.html
+++ b/resources.html
@@ -11,6 +11,7 @@
 <body>
     <main>
         <div class="resources-header"></div>
+        
     </main> 
 
     <div class="topnav">
@@ -20,6 +21,46 @@
         <a href="resources.html">Local Resources</a>
         <a href="questions.html">FAQ</a>
     </div>
+    <main>
+        <h1 class="resource-heading">Resources by Region</h1>
+        <section class="resource-container">
+            <div class="resource-one">
+                <!-- faq question -->
+                <h2 class="resource-page">Northern Michigan</h2>
+                <!-- faq answer -->
+                <div class="resource-body">
+                    <p>places in there
+                        
+                    </p>
+                </div>
+            </div>
+            <hr class="hr-line">
+            <div class="resource-two">
+                <!-- faq question -->
+                <h2 class="resource-page">Central Michigan</h2>
+                <!-- faq answer -->
+                <div class="resource-body">
+                    <p>The typical maintenance for solar panels is cleaning and a yearly inspection. Cleanings are 
+                        typically done twice a year, unless there is not regular rainfall or they are installed in 
+                        an area prone to dirt and debris. </p>
+                </div>
+            </div>
+            <hr class="hr-line">
+            <div class="resource-three">
+                <!-- faq question -->
+<h2 class="resource-page">How do I know if I need to schedule panel maintenance? </h2>
+                <!-- faq answer -->
+                <div class="resource-body">
+                    <p>If there is a drop in productivity, or your electricity bills are 
+                        higher than usual, the panels may not be performing properly. </p>
+                    <p>The drop in production indicates there is dirt and debris on the panels, 
+                        or that there is another maintenance issue that needs to be addressed. </p>
+                </div>
+            </div>
+        </section>
+    </main>
+    <script src="main.js"></script>
+
 
 <h3>Local Resources</h3>    
 
