--- a/index.html
+++ b/index.html
@@ -11,6 +11,25 @@
 
 
 <body>
+    <nav class="navbar">
+        <div class="title">Solar For Dairy</div>
+        <a href="#" class="toggle-button">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </a>
+        <div class="navbar-links">
+           <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="calculator.html">Solar Cost Calculator</a></li>
+            <li><a href="funding.html">Funding</a></li>
+            <li><a href="resources.html">Local Resources</a></li>
+            <li><a href="questions.html">FAQ</a></li>
+            </ul>
+        </div>
+    </nav>
+
+
     <main>
         <div class="index-header"></div>
     </main>
