--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <nav class="navbar">
-        <div class="title">Solar For Dairy</div>
+        <div class="title">SOLAR</div>
         <a href="#" class="toggle-button">
             <span class="bar"></span>
             <span class="bar"></span>
