--- a/index.html
+++ b/index.html
@@ -61,6 +61,6 @@
        <p><a href=http://maec.msu.edu/farmenergy/index.html>Back to Michigan Farm Energy Program</a></p> 
     </div>
     
-    <script src="main.js" defer></script>
+    <script src="main.js"></script>
 </body>
 </html>
