change pixel to rem

--- a/calculator.html
+++ b/calculator.html
@@ -6,21 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Economic Feasibility Analysis</title>
-    <h1>Michigan State University Decision Support Tool</h1> 
 </head>
 <body>
+    <nav class="navbar">
+        <div class="title">DAYLIGHT DAIRY</div>
+        <a href="#" class="toggle-button">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </a>
+        <div class="navbar-links">
+           <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="calculator.html">Solar Cost Calculator</a></li>
+            <li><a href="funding.html">Funding</a></li>
+            <li><a href="resources.html">Local Resources</a></li>
+            <li><a href="questions.html">FAQ</a></li>
+            </ul>
+        </div>
+    </nav>
     <main>
         <div class="calculator-header"></div>
     </main>
 
-    <div class="topnav">
-        <a href="index.html">Home</a>
-        <a href="calculator.html">Solar Cost Calculator</a>
-        <a href="funding.html">Funding</a></li>
-        <a href="resources.html">Local Resources</a>
-        <a href="questions.html">FAQ</a>
-    </div>
-
+    <div class="body-text">
     <section>
         <form> <h3> Please Answer the Following Questions About Your Farm</h3>
             <p><label> Which region of Michigan is your farm located?
@@ -56,5 +65,7 @@
             <p><button>Submit</button></p>
         </form>
     </section>
+    </div>
+    <script src="main.js"></script>
 </body>
 </html>
