--- a/questions.html
+++ b/questions.html
@@ -6,21 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>FAQ</title>
-    <h1>Michigan State University SolarforDairy</h1> 
 </head>
 <body>
+    <nav class="navbar">
+        <div class="title">DAYLIGHT DAIRY</div>
+        <a href="#" class="toggle-button">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </a>
+        <div class="navbar-links">
+           <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="calculator.html">Solar Cost Calculator</a></li>
+            <li><a href="funding.html">Funding</a></li>
+            <li><a href="resources.html">Local Resources</a></li>
+            <li><a href="questions.html">FAQ</a></li>
+            </ul>
+        </div>
+    </nav>
+
     <main>
         <div class="questions-header"></div>
     </main> 
 
-    <div class="topnav">
-        <a href="index.html">Home</a>
-        <a href="calculator.html">Solar Cost Calculator</a>
-        <a href="funding.html">Funding</a></li>
-        <a href="resources.html">Local Resources</a>
-        <a href="questions.html">FAQ</a>
-    </div>
-    
     <main>
         <h1 class="faq-heading">Frequently Asked Questions</h1>
         <section class="faq-container">
