--- a/funding.html
+++ b/funding.html
@@ -6,21 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Funding Opportunities</title>
-    <h1>Michigan State University SolarforDairy</h1>
 </head>
 
 <body>
+    <nav class="navbar">
+        <div class="title">DAYLIGHT DAIRY</div>
+        <a href="#" class="toggle-button">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </a>
+        <div class="navbar-links">
+           <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="calculator.html">Solar Cost Calculator</a></li>
+            <li><a href="funding.html">Funding</a></li>
+            <li><a href="resources.html">Local Resources</a></li>
+            <li><a href="questions.html">FAQ</a></li>
+            </ul>
+        </div>
+    </nav>
+
     <main>
         <div class="funding-header"></div>
     </main> 
 
-    <div class="topnav">
-        <a href="index.html">Home</a>
-        <a href="calculator.html">Solar Cost Calculator</a>
-        <a href="funding.html">Funding</a></li>
-        <a href="resources.html">Local Resources</a>
-        <a href="questions.html">FAQ</a>
-    </div>
+    <div class="body-text">
     <p><h4>The Investment Tax Credit </h4></p>
     <p>The Investment Tax Credit (ITC), also known as the federal solar tax credit allows The investment 
         tax credit (ITC), also known as the federal solar tax credit, applies to both residential and 
@@ -34,5 +45,8 @@
         10% of the cost from their taxes </p>
         <p><a href="https://news.energysage.com/solar-tax-credit-explained/">Click here for more information</a>
         </p>
+    </div>
+
+    <script src="main.js"></script>
 </body>
 </html>
