--- a/calculator.html
+++ b/calculator.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav class="navbar">
-        <div class="title">DAYLIGHT DAIRY</div>
+        <div class="title">MICHIGAN STATE UNIVERSITY</div>
         <a href="#" class="toggle-button">
             <span class="bar"></span>
             <span class="bar"></span>
@@ -29,15 +29,24 @@
         <div class="calculator-header"></div>
     </main>
 
+    <div class="main-header">
+        <h2>Solar for Dairy</h2>
+        <p>Solar for Dairy is a program designed to help dairy farmers in Michigan explore the potential of 
+            installing solar panels on their farm structures and non-arable farmland.
+        </p>
+        </div>
+
     <div class="body-text">
     <section>
-        <form> <h3> Please Answer the Following Questions About Your Farm</h3>
+        <h3>Solar Cost Calculator</h3>
+        <form> <h4> Please Answer the Following Questions About Your Farm</h4>
             <p><label> Which region of Michigan is your farm located?
                 <select>
                     <option value="Northern Michigan">Northern Michigan</option>
                     <option value="Western Michigan">Western Michigan</option>
                     <option value="Central Michigan">Central Michigan</option>
                     <option value="Southeast Michigan">Southeast Michigan</option>
+                    <option value="Upper Peninsula">Upper Peninsula</option>
                   </select>
             <p><label>How much electricity does your farm consume per year? (kWh)
                 <input type="text"> </p>
