--- a/funding.html
+++ b/funding.html
@@ -10,7 +10,7 @@
 
 <body>
     <nav class="navbar">
-        <div class="title">DAYLIGHT DAIRY</div>
+        <div class="title">MICHIGAN STATE UNIVERSITY</div>
         <a href="#" class="toggle-button">
             <span class="bar"></span>
             <span class="bar"></span>
@@ -30,6 +30,13 @@
     <main>
         <div class="funding-header"></div>
     </main> 
+
+    <div class="main-header">
+        <h2>Solar for Dairy</h2>
+        <p>Solar for Dairy is a program designed to help dairy farmers in Michigan explore the potential of 
+            installing solar panels on their farm structures and non-arable farmland.
+        </p>
+        </div>
 
     <div class="body-text">
     <p><h4>The Investment Tax Credit </h4></p>
