--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <nav class="navbar">
-        <div class="title">DAYLIGHT DAIRY</div>
+        <div class="title">MICHIGAN STATE UNIVERSITY</div>
         <a href="#" class="toggle-button">
             <span class="bar"></span>
             <span class="bar"></span>
@@ -33,7 +33,10 @@
     </main>
 
    <div class="main-header">
-    <h2>Michigan State University Decision Support System</h2>
+    <h2>Solar for Dairy</h2>
+    <p>Solar for Dairy is a program designed to help dairy farmers in Michigan explore the potential of 
+        installing solar panels on their farm structures and non-arable farmland.
+    </p>
     </div>
 
 
