--- a/questions.html
+++ b/questions.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav class="navbar">
-        <div class="title">DAYLIGHT DAIRY</div>
+        <div class="title">MICHIGAN STATE UNIVERSITY</div>
         <a href="#" class="toggle-button">
             <span class="bar"></span>
             <span class="bar"></span>
@@ -29,6 +29,13 @@
     <main>
         <div class="questions-header"></div>
     </main> 
+
+    <div class="main-header">
+        <h2>Solar for Dairy</h2>
+        <p>Solar for Dairy is a program designed to help dairy farmers in Michigan explore the potential of 
+            installing solar panels on their farm structures and non-arable farmland.
+        </p>
+        </div>
 
     <main>
         <h1 class="faq-heading">Frequently Asked Questions</h1>
@@ -67,9 +74,9 @@
                 <h2 class="faq-page">How much maintenance do solar panels require?</h2>
                 <!-- faq answer -->
                 <div class="faq-body">
-                    <p>The typical maintenance for solar panels is cleaning and a yearly inspection. Cleanings are 
-                        typically done twice a year, unless there is not regular rainfall or they are installed in 
-                        an area prone to dirt and debris. </p>
+                    <p>The typical maintenance for solar panels is cleaning and a yearly inspection. 
+                        Cleanings are usually needed twice a year, unless there is not regular rainfall 
+                        or they are installed in an area prone to dirt and debris. </p>
                 </div>
             </div>
             <hr class="hr-line">
@@ -78,10 +85,10 @@
 <h2 class="faq-page">How do I know if I need to schedule panel maintenance? </h2>
                 <!-- faq answer -->
                 <div class="faq-body">
-                    <p>If there is a drop in productivity, or your electricity bills are 
-                        higher than usual, the panels may not be performing properly. </p>
-                    <p>The drop in production indicates there is dirt and debris on the panels, 
-                        or that there is another maintenance issue that needs to be addressed. </p>
+                    <p>If there is a drop in electricity production, or your electricity bills are higher 
+                        than usual, the panels may not be functioning properly. </p>
+                    <p> The drop in production could mean there is dirt and debris on the panels, or that 
+                        there is a maintenance issue that needs to be addressed. </p>
                 </div>
             </div>
         </section>
