--- a/resources.html
+++ b/resources.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav class="navbar">
-        <div class="title">DAYLIGHT DAIRY</div>
+        <div class="title">MICHIGAN STATE UNIVERSITY</div>
         <a href="#" class="toggle-button">
             <span class="bar"></span>
             <span class="bar"></span>
@@ -30,6 +30,12 @@
         <div class="resources-header"></div>
     </main> 
 
+    <div class="main-header">
+        <h2>Solar for Dairy</h2>
+        <p>Solar for Dairy is a program designed to help dairy farmers in Michigan explore the potential of 
+            installing solar panels on their farm structures and non-arable farmland.
+        </p>
+        </div>
 
     <main>
         <h1 class="resource-heading">Resources by Region</h1>
