--- a/calculator.html
+++ b/calculator.html
@@ -36,10 +36,13 @@
             installing solar panels on their farm structures and non-arable farmland.
         </p>
     </div>
-     
-        <h3>Solar Cost Calculator</h3>
+    <div id="calculatorHeader">
+        <h2>Solar Cost Calculator</h2>
+        <p>The calculator on this website is being provided for educational purposes only. The calculations are meant to illustrate the economic impact of investing in photovoltatic technology, not to replace consulting with business professionals about this investment. Actual returns and values will vary. </p>
+      </div>
+    
  <div id="farmerForm">
-<h2> Please answer the following questions about your farm in number format (i.e., type "10" not "ten"): </h2>
+<h3> Please answer the following questions about your farm in number format (i.e., type "10" not "ten"): </h3>
  <p><label>How many cows do you milk on your farm?
       <input id="numberOfCows" type="text" style="padding-right:20px; text-align:center;">   </input><span style="margin-left:-45px; color: #5f5f5f">cows</span></label> </p>
   <p><label>How much East, West, or South-facing space is available for solar panels on your farm?
