--- a/calculator.html
+++ b/calculator.html
@@ -38,7 +38,7 @@
     </div>
     <div id="calculatorHeader">
         <h2>Solar Cost Calculator</h2>
-        <p>The calculator on this website is being provided for educational purposes only. The calculations are meant to illustrate the economic impact of investing in photovoltatic technology, not to replace consulting with business professionals about this investment. Actual returns and values will vary. </p>
+        <p>Disclaimer: The calculator on this website is intended for educational purposes only. The calculations are meant to illustrate the economic impact of investing in photovoltatic technology, not to be official financial guidance. Actual returns and values will vary. Farmers interested in installing photovoltaic products should consult with a professional before making any purchase or investment. </p>
       </div>
     
  <div id="farmerForm">
