--- a/funding.html
+++ b/funding.html
@@ -58,7 +58,7 @@
             <td class="shaded-column">Federal Tax Credit</td>
             <td>Tax credit</td>
             <td>30% of installation cost</td>
-            <td>N/A</td>
+            <td>For panels installed by 2033</td>
             <td><p><a href="https://news.energysage.com/solar-tax-credit-explained/">More info</a>
             </p></td>
           </tr>
@@ -85,8 +85,8 @@
           <tr>
             <td class="shaded-column">Michigan Saves</td>
             <td>Loan</td>
-            <td>Data 3</td>
-            <td>Data 4</td>
+            <td>Varies based on available financing</td>
+            <td>Non-profit green bank</td>
             <td><p><a href="https://michigansaves.org/">More info</a>
             </p></td>
           </tr>
