--- a/questions.html
+++ b/questions.html
@@ -91,6 +91,15 @@
                         there is a maintenance issue that needs to be addressed. </p>
                 </div>
             </div>
+            <hr class="hr-line">
+            <div class="faq-four">
+                <!-- faq question -->
+<h2 class="faq-page">Solar energy lease agreement considerations </h2>
+                <!-- faq answer -->
+                <div class="faq-body">
+                    <p><a href="https://www.canr.msu.edu/videos/solar-energy-lease-agreement-considerations">Watch this video from MSU Extension</a></p>
+                </div>
+            </div>
         </section>
     </main>
     <script src="main.js"></script>
