--- a/resources.html
+++ b/resources.html
@@ -38,11 +38,11 @@
         </div>
 
     <main>
-        <h1 class="resource-heading">Resources by Region</h1>
+        <h1 class="resource-heading">Resources</h1>
         <section class="resource-container">
             <div class="resource-one">
                 <!-- faq question -->
-                <h2 class="resource-page">Central Michigan</h2>
+                <h2 class="resource-page"></h2>
                 <!-- faq answer -->
                 <div class="resource-body">
                     <p>Content will be added as the vetted list of vendors is developed
