--- a/calculator.html
+++ b/calculator.html
@@ -21,7 +21,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="calculator.html">Solar Cost Calculator</a></li>
             <li><a href="funding.html">Funding</a></li>
-            <li><a href="resources.html">Local Resources</a></li>
+            <li><a href="resources.html">Resources</a></li>
             <li><a href="questions.html">FAQ</a></li>
             </ul>
         </div>
