--- a/resources.html
+++ b/resources.html
@@ -38,56 +38,22 @@
         </div>
 
     <main>
-        <h1 class="resource-heading">Resources</h1>
-        <section class="resource-container">
-            <div class="resource-one">
-                <!-- faq question -->
-                <h2 class="resource-page"></h2>
-                <!-- faq answer -->
-                <div class="resource-body">
-                    <p>Content will be added as the vetted list of vendors is developed
-                    </p>
-                </div>
-            </div>
-            <hr class="hr-line">
-            <div class="resource-two">
-                <!-- faq question -->
-                <h2 class="resource-page">Southeast Michigan</h2>
-                <!-- faq answer -->
-                <div class="resource-body">
-                    <p>Content will be added as the vetted list of vendors is developed </p>
-                </div>
-            </div>
-            <hr class="hr-line">
-            <div class="resource-three">
-                <!-- faq question -->
-                <h2 class="resource-page">Northern Michigan </h2>
-                <!-- faq answer -->
-                <div class="resource-body">
-                    <p>Content will be added as the vetted list of vendors is developed</p>
-                </div>
-            </div>
-            <hr class="hr-line">
-            <div class="resource-four">
-                <!-- faq question -->
-                <h2 class="resource-page">Upper Peninsula of Michigan</h2>
-                <!-- faq answer -->
-                <div class="resource-body">
-                    <p>Content will be added as the vetted list of vendors is developed
-                    </p>
-                </div>
-            </div>
-            <hr class="hr-line">
-            <div class="resource-five">
-                <!-- faq question -->
-                <h2 class="resource-page">West Michigan</h2>
-                <!-- faq answer -->
-                <div class="resource-body">
-                    <p>Content will be added as the vetted list of vendors is developed 
-                    </p>
-                </div>
-            </div>
-        </section>
+       <h1 class="resource-heading">Resources</h1>
+        <h3>MSU Extension Links</h3>
+        <ul class="resource-list">
+            <li><a href="https://www.energy.gov/eere/solar/farmers-guide-going-solar ">A farmer's guide to going solar</a></li>
+            <li><a href="https://www.canr.msu.edu/bioeconomy/solar-photovoltaic/agriculture-solar-electric-investment">MSU Extension Webinar: Agriculture solar investment</a></li>
+            <li><a href="https://www.canr.msu.edu/news/considering-solar-energy-it-can-yield-real-cost-savings-on-your-farm">How solar energy can save money on your farm</a></li>
+            <li><a href="https://www.canr.msu.edu/bioeconomy/solar-photovoltaic/leasing-land-for-solar-projects">Leasing land for solar projects</a></li>
+            <li><a href="https://www.canr.msu.edu/news/solar_power_case_study_black_star_farms">MSU Extension: Black Star Farms solar power case study</a></li>
+            <li><a href="https://www.canr.msu.edu/news/solar_power_case_study_king_orchards_fruit_co._llc">MSU Extension: King Orchards solar power case study</a></li>
+        </ul>
+
+
+
+
+
+
     </main>
     <script src="main.js"></script>
 
