--- a/resources.html
+++ b/resources.html
@@ -26,10 +26,6 @@
         </div>
     </nav>
 
-    <main>
-        <div class="resources-header"></div>
-    </main> 
-
     <div class="main-header">
         <h2>Solar for Dairy</h2>
         <p>Solar for Dairy is a program designed to help dairy farmers in Michigan explore the potential of 
@@ -37,8 +33,13 @@
         </p>
         </div>
 
+
     <main>
-        <h1 class="resource-heading">Resources</h1>
+        <div id="resourceHeader">
+        <h2>Resources</h2>
+        <p>Click on the following resources to expand the boxes and get more information!</p>
+      </div>
+
         <section class="resource-container">
             <div class="resource-one">
                 <!-- resource option -->
